--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "url": "https://github.com/baluchedurupally/explain-balu-app/issues"
   },
   "homepage": "https://github.com/baluchedurupally/explain-balu-app#readme",
-  "description": "",
   "devDependencies": {
+    "@tailwindcss/cli": "^4.1.18",
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18"
-  }
+  },
+  "description": ""
 }
