--- a/explain-api/wrangler.toml
+++ b/explain-api/wrangler.toml
@@ -1,5 +1,6 @@
 name = "explain-api"
 main = "src/index.js"
 compatibility_date = "2026-01-29"
+
 [ai]
-binding = "AI" # available as env.AI
+binding = "AI"
